Increase line height for header to prevent overlap

--- a/media/kjhealy-print.css
+++ b/media/kjhealy-print.css
@@ -121,7 +121,7 @@ h1,h2,h3,h4 {
 h1 {
 	text-align: left;
 	font-size: 3em;
-	line-height: 1em;
+	line-height: 1.4em;
 	position: relative;
 	left: 28%;
 }
